--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ Bob Withers <bwit@pobox.com>
 Bridger Maxwell <bridgeyman@gmail.com>
 Chris Tserng <tserng@amazon.com>
 Christophe Dumez <ch.dumez@samsung.com>
+Chunbo Hua <chunbo.hua@intel.com>
 Cody Barnes <conceptgenesis@gmail.com>
 Colin Plumb
 Cyril Lashkevich <notorca@gmail.com>
