--- a/AUTHORS
+++ b/AUTHORS
@@ -90,6 +90,7 @@ CZ Theng <cz.theng@gmail.com>
 Miguel Paris <mparisdiaz@gmail.com>
 Raman Budny <budnyjj@gmail.com>
 Stephan Hartmann <stha09@googlemail.com>
+Raffaele Noro <raffaelenoro@gmail.com>
 
 &yet LLC <*@andyet.com>
 Agora IO <*@agora.io>
