--- a/AUTHORS
+++ b/AUTHORS
@@ -69,6 +69,7 @@ Mallikarjuna Rao V <vm.arjun@samsung.com>
 Manish Jethani <manish.jethani@gmail.com>
 Martin Storsjo <martin@martin.st>
 Matthias Liebig <matthias.gcode@gmail.com>
+Maksim Sisov <msisov@igalia.com>
 Maxim Pavlov <pavllovmax@gmail.com>
 Maxim Potapov <vopatop.skam@gmail.com>
 Michael Iedema <michael@kapsulate.com>
